--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#0A192F"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,6 +20,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:text="Menu Makanan Perancis"
+        android:textColor="#A0ABC9"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -28,4 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
 </LinearLayout>
+
